@@ -31,6 +31,9 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	Bill Shupp
 	- Add -o option to vmoduser to set V_OVERRIDE flag. [875505]
 
+	Casey Zacek
+	- Create maildirsize file in vsetuserquota(). [869457]
+
 5.4.0-rc1 - released 1-Jan-04
 
 	Michael Bowe
